--- a/Core_Portfolio/Views/Shared/Components/AboutList/Default.cshtml
+++ b/Core_Portfolio/Views/Shared/Components/AboutList/Default.cshtml
@@ -1,40 +1,38 @@
-﻿<@using EntityLayer.Con 
-    div class="section pt-4 px-3 px-lg-4" id="about">
+﻿@using EntityLayer.Concrete
+@model List<About>
+<div class="section pt-4 px-3 px-lg-4" id="about">
     <div class="container-narrow">
+        @foreach (var item in Model)
+    {
         <div class="row">
             <div class="col-md-6">
-                <h2 class="h4 my-2">Hello! I’m Walter Patterson.</h2>
-                <p>I am passionate about UI/UX design and Web Design. I am a skilled front-end developer and master of graphic design tools such as Photoshop and Sketch. I am a quick learner and a team worker that gets the job done. I can easily capitalize on low hanging fruits and quickly maximize timely deliverables for real-time schemas.</p>
+                <h2 class="h4 my-2">@item.Title</h2>
+                <p>@item.Description</p>
                 <div class="row mt-3">
                     <div class="col-sm-2">
                         <div class="pb-1">Age:</div>
                     </div>
                     <div class="col-sm-10">
-                        <div class="pb-1 fw-bolder">28</div>
+                        <div class="pb-1 fw-bolder">@item.Age</div>
                     </div>
                     <div class="col-sm-2">
                         <div class="pb-1">Email:</div>
                     </div>
                     <div class="col-sm-10">
-                        <div class="pb-1 fw-bolder">walter@company.com</div>
+                        <div class="pb-1 fw-bolder">@item.Mail</div>
                     </div>
-                    <div class="col-sm-2">
-                        <div class="pb-1">Skype:</div>
-                    </div>
-                    <div class="col-sm-10">
-                        <div class="pb-1 fw-bolder">username@skype.com</div>
-                    </div>
+            
                     <div class="col-sm-2">
                         <div class="pb-1">Phone:</div>
                     </div>
                     <div class="col-sm-10">
-                        <div class="pb-1 fw-bolder">+0718-111-0011</div>
+                        <div class="pb-1 fw-bolder">@item.Phone</div>
                     </div>
                     <div class="col-sm-2">
                         <div class="pb-1">Address:</div>
                     </div>
                     <div class="col-sm-10">
-                        <div class="pb-1 fw-bolder">New Delhi, India</div>
+                        <div class="pb-1 fw-bolder">@item.Address</div>
                     </div>
                     <div class="col-sm-2">
                         <div class="pb-1">Staus:</div>
@@ -46,5 +44,7 @@
             </div>
             <div class="col-md-5 offset-md-1" data-aos="fade-left" data-aos-delay="100"><img class="avatar img-fluid mt-2" src="/template/images/imageprofile.png" width="400" height="400" alt="Walter Patterson" /></div>
         </div>
+    }
+        
     </div>
 </div>
