--- a/Core_Portfolio/Views/Feature/Index.cshtml
+++ b/Core_Portfolio/Views/Feature/Index.cshtml
@@ -1,78 +1,6 @@
-﻿@using EntityLayer.Concrete
-@model List<Skill>
+﻿
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-<div class="card-header border-0">
-    <h3 class="mb-0">Skill List Table</h3>
-</div>
-<!-- Light table -->
-<div class="table-responsive">
-    <table class="table align-items-center table-flush">
-        <thead class="thead-light">
-            <tr>
-                <th scope="col" class="sort" data-sort="name">#</th>
-                <th scope="col" class="sort" data-sort="budget">Title</th>
-                <th scope="col" class="sort" data-sort="status">Ratio</th>
-                <th scope="col">Actions</th>
-                <th scope="col" class="sort" data-sort="completion">Completion</th>
-                <th scope="col"></th>
-            </tr>
-        </thead>
-        <tbody class="list">
-            @foreach (var item in Model)
-            {
-                <tr>
-                <th scope="row">
-                    <div class="media align-items-center">
-                        <a href="#" class="avatar rounded-circle mr-3">
-                            <img alt="Image placeholder" src="../assets/img/theme/bootstrap.jpg">
-                        </a>
-                        <div class="media-body">
-                            <span class="name mb-0 text-sm">@item.SkillID</span>
-                        </div>
-                    </div>
-                </th>
-                <td class="budget">
-                    @item.Title
-                </td>
-                <td>
-                    <span class="badge badge-dot mr-4">
-                        <i class="bg-warning"></i>
-                        <span class="status">@item.Value</span>
-                    </span>
-                </td>
-                <td>
-                    <div class="avatar-group">
-                        
-                    </div>
-                </td>
-                <td>
-                    <div class="d-flex align-items-center">
-                        <span class="completion mr-2">60%</span>
-                        <div>
-                            <div class="progress">
-                                <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
-                            </div>
-                        </div>
-                    </div>
-                </td>
-                <td class="text-right">
-                    <div class="dropdown">
-                        <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fas fa-ellipsis-v"></i>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </div>
-                </td>
-            </tr>
-            }
-            
-        </tbody>
-    </table>
-</div>
+<h1>Index</h1>
