--- a/Core_Portfolio/Views/Portfolio/Index.cshtml
+++ b/Core_Portfolio/Views/Portfolio/Index.cshtml
@@ -64,5 +64,5 @@
         </tbody>
     </table>
 
-    <a href="/Portfolio/AddPortfolio/" class="btn btn-success"> <i class="ni ni-collection"> Add New Experince</i></a>
+    <a href="/Portfolio/AddPortfolio/" class="btn btn-success"> <i class="ni ni-collection"> Add New Project</i></a>
 </div>
