--- a/Core_Portfolio/Views/Portfolio/AddPortfolio.cshtml
+++ b/Core_Portfolio/Views/Portfolio/AddPortfolio.cshtml
@@ -2,10 +2,10 @@
 
 @{
     ViewData["Title"] = "AddPortfolio";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
 }
 
-<div class="card-header border-0">
+<div >
     <h3 class="mb-0">Add Portfolio</h3>
 </div>
 <form class="form-control" method="post">
