--- a/Core_Portfolio/Views/Portfolio/Index.cshtml
+++ b/Core_Portfolio/Views/Portfolio/Index.cshtml
@@ -2,67 +2,50 @@
 @model List<Portfolio>
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
 }
 
 
 
-<div class="card-header border-0">
-    <h3 class="mb-0">Portfolio List Table</h3>
-</div>
-<!-- Light table -->
-<div class="table-responsive">
-    <table class="table align-items-center table-flush">
-        <thead class="thead-bold">
-            <tr>
-                <th scope="col" class="sort" data-sort="name">#</th>
-                <th scope="col" class="sort" data-sort="budget">Name</th>
-                <th scope="col" class="sort" data-sort="budget">Project URL</th>
-                <th scope="col">Actions</th>
-            </tr>
-        </thead>
-        <tbody class="list">
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <th scope="row">
-                        <div class="media align-items-center">
-                            <div class="media-body">
-                                <strong> <span class="name mb-0 text-sm">@item.PortfolioID</span></strong>
-                            </div>
-                        </div>
-                    </th>
 
-                    <td class="budget">
-                        @item.Name
-                    </td>
+<div class="row">
 
-                    <td class="budget">
-                        @item.ProjectURL
-                    </td>
-                    <td>
-                        <div class="avatar-group">
+    <div class="col-lg-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Portfolio List Table</h4>
+                <p class="card-description">
+                    Add class <code>.table-bordered</code>
+                </p>
+                <div class="table-responsive">
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Name</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+
+                                <tr>
+                                    <td> @item.PortfolioID </td>
+                                    <td> @item.Name </td> 
+                                    <td>
+                                        <div class="avatar-group">
                             @Html.ActionLink("Delete", "DeletePortfolio", new { id = item.PortfolioID }, new { @class = "btn btn-danger", onclick = "return confirm ('Do you really want to delete it?')" })
                             <a href="/Portfolio/UpdatePortfolio/@item.PortfolioID" class="btn btn-primary"> Update</a>
                         </div>
-                    </td>
-                    <td class="text-right">
-                        <div class="dropdown">
-                            <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fas fa-ellipsis-v"></i>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-            }
-
-        </tbody>
-    </table>
-
-    <a href="/Portfolio/AddPortfolio/" class="btn btn-success"> <i class="ni ni-collection"> Add New Project</i></a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <a href="/Portfolio/AddPortfolio/" class="btn btn-success">  Add New Project</a>
 </div>
