--- a/Core_Portfolio/Views/Shared/_NewAdminLayout.cshtml
+++ b/Core_Portfolio/Views/Shared/_NewAdminLayout.cshtml
@@ -365,16 +365,7 @@
             </nav>
             <!-- partial -->
             <div class="main-panel">
-                <div class="content-wrapper">
-                    <div class="page-header">
-                        <h3 class="page-title"> Basic Tables </h3>
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="#">Tables</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">Basic tables</li>
-                            </ol>
-                        </nav>
-                    </div>
+                <div class="content-wrapper">  
                     @RenderBody()
                 </div>
                 <!-- content-wrapper ends -->
@@ -393,8 +384,8 @@
     </div>
     <!-- container-scroller -->
     <!-- plugins:js -->
-    <script src="/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/vendors/js/vendor.bundle.base.js"></script>
-    <!-- endinject -->
+@*     <script src="/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/vendors/js/vendor.bundle.base.js"></script>
+ *@    <!-- endinject -->
     <!-- Plugin js for this page -->
     <!-- End plugin js for this page -->
     <!-- inject:js -->
