--- a/Core_Portfolio/Views/Shared/Components/LastProjects/Default.cshtml
+++ b/Core_Portfolio/Views/Shared/Components/LastProjects/Default.cshtml
@@ -21,7 +21,7 @@
                             <div class="preview-item-content d-sm-flex flex-grow">
                                 <div class="flex-grow">
                                     <h6 class="preview-subject">@item.Name</h6>
-                                    <p class="text-muted mb-0">@item.ProjectURL</p>
+                                    <p class="text-muted mb-0">Price:@item.Price $</p>
                                 </div>
                                 <div class="mr-auto text-sm-right pt-2 pt-sm-0">
                                     <p class="text-muted">15 minutes ago</p>
