--- a/Core_Portfolio/Views/Shared/Components/MessageList/Default.cshtml
+++ b/Core_Portfolio/Views/Shared/Components/MessageList/Default.cshtml
@@ -1,5 +1,5 @@
 ﻿@using EntityLayer.Concrete
-@model List<Message>
+@model List<UserMessage>
 <div class="row">
     <div class="col-md-6 col-xl-4 grid-margin stretch-card">
         <div class="card">
@@ -13,21 +13,88 @@
                    <div class="preview-list">
                     <div class="preview-item border-bottom">
                         <div class="preview-thumbnail">
-                                <img src="/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face6.jpg" alt="image" class="rounded-circle" />
+                                <img src="@item.User.ImageURL" alt="image" class="rounded-circle" />
                         </div>
                         <div class="preview-item-content d-flex flex-grow">
                             <div class="flex-grow">
                                 <div class="d-flex d-md-block d-xl-flex justify-content-between">
-                                    <h6 class="preview-subject">@item.Name</h6>
-                                    <p class="text-muted text-small">@item.Mail</p>
+                                    <h6 class="preview-subject">@item.Title</h6>
+                                        <p class="text-muted text-small">@item.User.Name @item.User.Surname @(((DateTime)item.Date).ToString("dd-MMM-yyyy"))</p>
                                 </div>
-                                <p class="text-muted">@item.Content</p>
+                                <p class="text-muted">@item.Content.Substring(0,20)...</p>
                             </div>
                         </div>
                     </div>
                 </div> 
                 }
-                
+                @* <div class="col-md-6 col-xl-4 grid-margin stretch-card">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex flex-row justify-content-between">
+                                <h4 class="card-title">Messages</h4>
+                                <p class="text-muted mb-1 small">View all</p>
+                            </div>
+                            <div class="preview-list">
+                                <div class="preview-item border-bottom">
+                                    <div class="preview-thumbnail">
+                                        <img src="assets/images/faces/face6.jpg" alt="image" class="rounded-circle" />
+                                    </div>
+                                    <div class="preview-item-content d-flex flex-grow">
+                                        <div class="flex-grow">
+                                            <div class="d-flex d-md-block d-xl-flex justify-content-between">
+                                                <h6 class="preview-subject">Leonard</h6>
+                                                <p class="text-muted text-small">5 minutes ago</p>
+                                            </div>
+                                            <p class="text-muted">Well, it seems to be working now.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="preview-item border-bottom">
+                                    <div class="preview-thumbnail">
+                                        <img src="assets/images/faces/face8.jpg" alt="image" class="rounded-circle" />
+                                    </div>
+                                    <div class="preview-item-content d-flex flex-grow">
+                                        <div class="flex-grow">
+                                            <div class="d-flex d-md-block d-xl-flex justify-content-between">
+                                                <h6 class="preview-subject">Luella Mills</h6>
+                                                <p class="text-muted text-small">10 Minutes Ago</p>
+                                            </div>
+                                            <p class="text-muted">Well, it seems to be working now.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="preview-item border-bottom">
+                                    <div class="preview-thumbnail">
+                                        <img src="assets/images/faces/face9.jpg" alt="image" class="rounded-circle" />
+                                    </div>
+                                    <div class="preview-item-content d-flex flex-grow">
+                                        <div class="flex-grow">
+                                            <div class="d-flex d-md-block d-xl-flex justify-content-between">
+                                                <h6 class="preview-subject">Ethel Kelly</h6>
+                                                <p class="text-muted text-small">2 Hours Ago</p>
+                                            </div>
+                                            <p class="text-muted">Please review the tickets</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="preview-item border-bottom">
+                                    <div class="preview-thumbnail">
+                                        <img src="assets/images/faces/face11.jpg" alt="image" class="rounded-circle" />
+                                    </div>
+                                    <div class="preview-item-content d-flex flex-grow">
+                                        <div class="flex-grow">
+                                            <div class="d-flex d-md-block d-xl-flex justify-content-between">
+                                                <h6 class="preview-subject">Herman May</h6>
+                                                <p class="text-muted text-small">4 Hours Ago</p>
+                                            </div>
+                                            <p class="text-muted">Thanks a lot. It was easy to fix it .</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> *@
             </div>
         </div>
     </div>
