--- a/Core_Portfolio/Areas/Writer/Views/Register/Index.cshtml
+++ b/Core_Portfolio/Areas/Writer/Views/Register/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core_Portfolio.Areas.Writer.Models.UserRegisterViewModel
 @{
     Layout = null;
 }
@@ -35,37 +35,49 @@
                             </div>
                             <h4>New here?</h4>
                             <h6 class="font-weight-light">Signing up is easy. It only takes a few steps</h6>
-                            <form class="pt-3">
+                            <form class="pt-3" method="post">
                                 <div class="form-group">
-                                    <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Username">
+                                    <label>Name</label>
+                                    <span asp-validation-for="Name" class="text-danger"></span>
+                                    <input type="text" asp-for="Name" class="form-control" />
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email">
+                                    <label>Surname</label>
+                                    <span asp-validation-for="Surname" class="text-danger"></span>
+                                    <input type="text" asp-for="Surname" class="form-control" />
                                 </div>
                                 <div class="form-group">
-                                    <select class="form-control form-control-lg" id="exampleFormControlSelect2">
-                                        <option>Country</option>
-                                        <option>United States of America</option>
-                                        <option>United Kingdom</option>
-                                        <option>India</option>
-                                        <option>Germany</option>
-                                        <option>Argentina</option>
-                                    </select>
+                                    <label>Image URL</label>
+                                    <span asp-validation-for="ImageURL" class="text-danger"></span>
+                                    <input type="text" asp-for="ImageURL" class="form-control" />
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
+                                    <label>Username</label>
+                                    <span asp-validation-for="UserName" class="text-danger"></span>
+                                    <input type="text" asp-for="UserName" class="form-control" />
                                 </div>
-                                <div class="mb-4">
-                                    <div class="form-check">
-                                        <label class="form-check-label text-muted">
-                                            <input type="checkbox" class="form-check-input">
-                                            I agree to all Terms & Conditions
-                                        </label>
-                                    </div>
+                                <div class="form-group">
+                                    <label>Password</label>
+                                    <span asp-validation-for="Password" class="text-danger"></span>
+                                    <input type="text" asp-for="Password" class="form-control" />
+                                </div>
+                                <div class="form-group">
+                                    <label>Confirm Password</label>
+                                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                                    <input type="text" asp-for="ConfirmPassword" class="form-control" />
+                                </div>
+                                <div class="form-group">
+                                    <label>Mail</label>
+                                    <span asp-validation-for="Mail" class="text-danger"></span>
+                                    <input type="text" asp-for="Mail" class="form-control" />
+                                </div>
+                                <div class="text-danger" asp-validation-summary="ModelOnly">
+
                                 </div>
                                 <div class="mt-3">
-                                    <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="../../index.html">SIGN UP</a>
-                                </div>
+                                    <button type="submit" class="btn btn-block btn btn-primary"> Register</button>
+@*                                     <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">SIGN UP</a>
+ *@                                </div>
                                 <div class="text-center mt-4 font-weight-light">
                                     Already have an account? <a href="login.html" class="text-primary">Login</a>
                                 </div>
