--- a/Core_Portfolio/Areas/Writer/Views/Register/Index.cshtml
+++ b/Core_Portfolio/Areas/Writer/Views/Register/Index.cshtml
@@ -79,7 +79,7 @@
 @*                                     <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">SIGN UP</a>
  *@                                </div>
                                 <div class="text-center mt-4 font-weight-light">
-                                    Already have an account? <a href="login.html" class="text-primary">Login</a>
+                                    Already have an account? <a href="/Writer/Login/Index/" class="text-primary">Login</a>
                                 </div>
                             </form>
                         </div>
