--- a/Core_Portfolio/Areas/Writer/Views/Default/Index.cshtml
+++ b/Core_Portfolio/Areas/Writer/Views/Default/Index.cshtml
@@ -1,60 +1,73 @@
-﻿
+﻿@using EntityLayer.Concrete
+@model List<Announcement>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_WriterLayout.cshtml";
 }
-
+@{
+    string color = "";
+}
 <div class="col-lg-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
-            <h4 class="card-title">Basic Table</h4>
-            <p class="card-description">
-                Add class <code>.table</code>
-            </p>
+            <h4 class="card-title">Announcements</h4>
             <div class="table-responsive">
                 <table class="table">
                     <thead>
                         <tr>
-                            <th>Profile</th>
-                            <th>VatNo.</th>
-                            <th>Created</th>
+                            <th>#</th>
+                            <th>Title</th>
+                            <th>Date</th>
                             <th>Status</th>
+                            <th>Actions</th>
                         </tr>
                     </thead>
+                 
                     <tbody>
-                        <tr>
-                            <td>Jacob</td>
-                            <td>53275531</td>
-                            <td>12 May 2017</td>
-                            <td><label class="badge badge-danger">Pending</label></td>
-                        </tr>
-                        <tr>
-                            <td>Messsy</td>
-                            <td>53275532</td>
-                            <td>15 May 2017</td>
-                            <td><label class="badge badge-warning">In progress</label></td>
-                        </tr>
-                        <tr>
-                            <td>John</td>
-                            <td>53275533</td>
-                            <td>14 May 2017</td>
-                            <td><label class="badge badge-info">Fixed</label></td>
-                        </tr>
-                        <tr>
-                            <td>Peter</td>
-                            <td>53275534</td>
-                            <td>16 May 2017</td>
-                            <td><label class="badge badge-success">Completed</label></td>
-                        </tr>
-                        <tr>
-                            <td>Dave</td>
-                            <td>53275535</td>
-                            <td>20 May 2017</td>
-                            <td><label class="badge badge-warning">In progress</label></td>
-                        </tr>
+                        @foreach (var item in Model)
+                        {
+                            if (item.Status=="Maintenance")
+                            {
+                                color = "badge badge-warning";
+                            }
+
+                            if (item.Status == "New Post")
+                            {
+                                color = "badge badge-primary";
+                            }
+                            
+                            if (item.Status=="New Writer")
+                            {
+                                color = "badge badge-danger";
+                            }
+                            <tr>
+                            <td> @item.ID</td>
+                            <td><b>@item.Title</b></td>
+                            <td>@item.Date.ToShortDateString()</td>
+                            <td><label class="@color">@item.Status</label></td>
+                                <td>
+                                    <a href="/Writer/Default/AnnouncementDetails/@item.ID" class="btn btn-info btn-md">
+                                        <i class="ti-alert btn-icon-prepend"></i>
+                                        Details
+                                    </a>
+                                </td>
+                        </tr> 
+                        }
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
 </div>
+<!-- container-scroller -->
+<!-- plugins:js -->
+<script src="/skydash/vendors/js/vendor.bundle.base.js"></script>
+<!-- endinject -->
+<!-- Plugin js for this page -->
+<!-- End plugin js for this page -->
+<!-- inject:js -->
+<script src="/skydash/js/off-canvas.js"></script>
+<script src="/skydash/js/hoverable-collapse.js"></script>
+<script src="/skydash/js/template.js"></script>
+<script src="/skydash/js/settings.js"></script>
+<script src="/skydash/js/todolist.js"></script>
