--- a/Core_Portfolio/Areas/Writer/Views/Default/_SideBarPartial.cshtml
+++ b/Core_Portfolio/Areas/Writer/Views/Default/_SideBarPartial.cshtml
@@ -1,40 +1,39 @@
 ﻿<nav class="sidebar sidebar-offcanvas" id="sidebar">
     <ul class="nav">
         <li class="nav-item">
-            <a class="nav-link" href="../../index.html">
-                <i class="icon-grid menu-icon"></i>
-                <span class="menu-title">Dashboard</span>
+            <a class="nav-link" href="/Writer/Dashboard/Index/">
+                <i class="icon-grid-2 menu-icon"></i>
+                <span class="menu-title">Statistics</span>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../../index.html">
+            <a class="nav-link" href="/Writer/Default/Index/">
+                <i class="icon-grid menu-icon"></i>
+                <span class="menu-title">Announcements</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">
                 <i class="icon-layout menu-icon"></i>
                 <span class="menu-title">Messages</span>
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="../../index.html">
-                <i class="icon-grid-2 menu-icon"></i>
-                <span class="menu-title">Tables</span>
-            </a>
-        </li>
-
-        <li class="nav-item">
-            <a class="nav-link" href="../../index.html">
+            <a class="nav-link" href="/Writer/Profile/Index/">
                 <i class="icon-head menu-icon"></i>
                 <span class="menu-title">Profile</span>
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="../../pages/documentation/documentation.html">
+            <a class="nav-link" href="/Writer/Profile/Index/">
                 <i class="icon-paper menu-icon"></i>
                 <span class="menu-title">Settings</span>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../../pages/documentation/documentation.html">
+            <a class="nav-link" href="#">
                 <i class="icon-paper menu-icon"></i>
                 <span class="menu-title">Logout</span>
             </a>
