--- a/Core_Portfolio/Areas/Writer/Views/Default/_SideBarPartial.cshtml
+++ b/Core_Portfolio/Areas/Writer/Views/Default/_SideBarPartial.cshtml
@@ -2,21 +2,50 @@
     <ul class="nav">
         <li class="nav-item">
             <a class="nav-link" href="/Writer/Dashboard/Index/">
-                <i class="icon-grid-2 menu-icon"></i>
+                <i class="ti-stats-up menu-icon"></i>
                 <span class="menu-title">Statistics</span>
             </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/Writer/Default/Index/">
-                <i class="icon-grid menu-icon"></i>
+                <i class="ti-announcement menu-icon"></i>
                 <span class="menu-title">Announcements</span>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">
-                <i class="icon-layout menu-icon"></i>
+            <a class="nav-link" data-toggle="collapse" href="#messages" aria-expanded="false" aria-controls="charts">
+                <i class="ti-email menu-icon"></i>
                 <span class="menu-title">Messages</span>
+                <i class="menu-arrow"></i>
             </a>
+            <div class="collapse" id="messages">
+                <ul class="nav flex-column sub-menu">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Writer/Message/RecevierMessage">
+                            <i class="ti-email"></i>
+                            <span class="ml-2">Inbox</span>
+                        </a>
+                    </li>
+                </ul>
+
+                <ul class="nav flex-column sub-menu">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Writer/Message/SenderMessage">
+                            <i class="ti-check"></i>
+                            <span class="ml-2">Sent</span>
+                        </a>
+                    </li>
+                </ul>
+
+                <ul class="nav flex-column sub-menu">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Writer/Message/SenderMessage">
+                            <i class="ti-pencil-alt"></i>
+                            <span class="ml-2">New Message</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </li>
 
         <li class="nav-item">
@@ -28,13 +57,13 @@
 
         <li class="nav-item">
             <a class="nav-link" href="/Writer/Profile/Index/">
-                <i class="icon-paper menu-icon"></i>
+                <i class="ti-settings menu-icon"></i>
                 <span class="menu-title">Settings</span>
             </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">
-                <i class="icon-paper menu-icon"></i>
+                <i class="ti-power-off menu-icon"></i>
                 <span class="menu-title">Logout</span>
             </a>
         </li>
