Enabled the writeruser to send a message

--- a/Core_Portfolio/Areas/Writer/Views/Message/RecevierMessage.cshtml
+++ b/Core_Portfolio/Areas/Writer/Views/Message/RecevierMessage.cshtml
@@ -27,8 +27,8 @@
                         {    
                             <tr>
                             <td> @item.WriterMessageID</td>
-                            <td><b>@item.Recevier</b></td>
-                            <td>@item.Sender</td>
+                            <td><b>@item.RecevierName</b></td>
+                            <td>@item.SenderName</td>
                             <td>@item.Subject</td>
                             <td>@item.Date.ToShortDateString()</td>
                                 <td>
