--- a/Core_Portfolio/Areas/Writer/Views/Message/SenderMessage.cshtml
+++ b/Core_Portfolio/Areas/Writer/Views/Message/SenderMessage.cshtml
@@ -26,8 +26,8 @@
                         {
                             <tr>
                                 <td> @item.WriterMessageID</td>
-                                <td><b>@item.Sender</b></td>
-                                <td>@item.Recevier</td>
+                                <td><b>@item.SenderName</b></td>
+                                <td>@item.RecevierName</td>
                                 <td>@item.Subject</td>
                                 <td>@item.Date.ToShortDateString()</td>
                                 <td>
