--- a/Core_Portfolio/Areas/Writer/Views/Message/MessageDetails.cshtml
+++ b/Core_Portfolio/Areas/Writer/Views/Message/MessageDetails.cshtml
@@ -9,20 +9,24 @@
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card">
-                <div class="card-header">Message Details</div>
+                <div class="card-header">Message Details </div>
                 <div class="card-body">
                     <form class="form-group">
                         <div class="form-group">
-                            @Html.Label("Subject")
-                            @Html.TextBoxFor(x => x.Subject, new { @class = "form-control", @readonly = true })
-                        </div>
+                            @Html.Label("Date")
+                            @Html.TextBoxFor(x => x.Date, new { @class = "form-control", @readonly = true })
+                        </div>                        
                         <div class="form-group">
                             @Html.Label("Sender")
-                            @Html.TextBoxFor(x => x.Sender, new { @class = "form-control", @readonly = true })
+                            @Html.TextBoxFor(x => x.SenderName, new { @class = "form-control", @readonly = true })
                         </div>
                         <div class="form-group">
                             @Html.Label("Receiver")
-                            @Html.TextBoxFor(x => x.Recevier, new { @class = "form-control", @readonly = true })
+                            @Html.TextBoxFor(x => x.RecevierName, new { @class = "form-control", @readonly = true })
+                        </div>
+                        <div class="form-group">
+                            @Html.Label("Subject")
+                            @Html.TextBoxFor(x => x.Subject, new { @class = "form-control", @readonly = true })
                         </div>
                         <div class="form-group">
                             @Html.Label("Content")
