The user was allowed to update their password.

--- a/Core_Portfolio/Areas/Writer/Views/Dashboard/Index.cshtml
+++ b/Core_Portfolio/Areas/Writer/Views/Dashboard/Index.cshtml
@@ -16,8 +16,8 @@
             <div class="col-12 col-xl-4">
                 <div class="justify-content-end d-flex">
                     <div class="dropdown flex-md-grow-1 flex-xl-grow-0">
-                        <button class="btn btn-sm btn-light bg-white dropdown-toggle" type="button" id="dropdownMenuDate2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                <i class="mdi mdi-calendar"></i> @DateTime.Now.ToShortDateString() - Today
+                        <button class="btn btn-sm btn-light ">
+                                 @DateTime.Now.ToShortDateString() - Today
                         </button>
                     </div>
                 </div>
@@ -28,27 +28,29 @@
 </div>
 <div class="row">
     <div class="col-md-6 grid-margin stretch-card">
-        <div class="card tale-bg">
-            <div class="card-people mt-auto">
-                <img src="/skydash/images/dashboard/people.svg" alt="people">
-                <div class="weather-info">
-                    <div class="d-flex">
-                        <div>
-                                <h2 class="mb-0 font-weight-normal"><i class="icon-sun mr-2"></i>@ViewBag.WeatherCelsius<sup>C</sup></h2>
+            <div class="card tale-bg">
+                <div class="card-people mt-auto">
+                    <img src="/skydash/images/dashboard/people.svg" alt="people">
+                    <div class="weather-info">
+                        <div class="d-flex align-items-center">
+                            <div>
+                                <h2 class="mb-0 font-weight-normal">
+                                    <i class="ti ti-thermometer"></i>@ViewBag.WeatherCelsius<sup>°C</sup>
+                                </h2>
                                 <br />
                                 <h2 class="mb-0 font-weight-normal">
-                                    <i class="icon-pressure mr-2"></i>
-                                    @ViewBag.WeatherPressure<sup></sup>
+                                    <i class="ti ti-barometer"></i>@ViewBag.WeatherPressure<sup>hPa</sup>
                                 </h2>
                             </div>
-                        <div class="ml-2">
+                            <div class="ml-2">
                                 <h4 class="location font-weight-normal">@ViewBag.WeatherCity</h4>
-                            <h6 class="font-weight-normal">Türkiye</h6>
+                                <h6 class="font-weight-normal">Türkiye</h6>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+
     </div>
     <div class="col-md-6 grid-margin transparent">
         <div class="row">
