The user was logged out. Also route operations have been completed.

--- a/Core_Portfolio/Areas/Writer/Views/Default/_SideBarPartial.cshtml
+++ b/Core_Portfolio/Areas/Writer/Views/Default/_SideBarPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿<nav class="sidebar sidebar-offcanvas" id="sidebar">
     <ul class="nav">
         <li class="nav-item">
-            <a class="nav-link" href="/Writer/Dashboard/Index/">
+            <a class="nav-link" href="/Writer/Dashboard1/Index/">
                 <i class="ti-stats-up menu-icon"></i>
                 <span class="menu-title">Statistics</span>
             </a>
@@ -62,7 +62,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link"  asp-controller="Login" asp-action="Logout">
                 <i class="ti-power-off menu-icon"></i>
                 <span class="menu-title">Logout</span>
             </a>
