--- a/Core_Portfolio/Areas/Writer/Views/Shared/Components/NavbarProfile/Default.cshtml
+++ b/Core_Portfolio/Areas/Writer/Views/Shared/Components/NavbarProfile/Default.cshtml
@@ -10,7 +10,7 @@
             <i class="ti-settings text-primary"></i>
             Settings
         </a>
-        <a class="dropdown-item" href="#">
+        <a class="dropdown-item" asp-controller="Login" asp-action="Logout">
             <i class="ti-power-off text-primary"></i>
             Logout
         </a>
