--- a/Core_Portfolio/Views/Admin/NewSideBar.cshtml
+++ b/Core_Portfolio/Views/Admin/NewSideBar.cshtml
@@ -54,7 +54,7 @@
         <span class="nav-link">Navigation</span>
     </li>
     <li class="nav-item menu-items">
-        <a class="nav-link" href="../../index.html">
+        <a class="nav-link" asp-controller="Dashboard" asp-action="Index">
             <span class="menu-icon">
                 <i class="mdi mdi-speedometer"></i>
             </span>
@@ -62,7 +62,7 @@
         </a>
     </li>
     <li class="nav-item menu-items">
-        <a class="nav-link" href=".../.../Views/Skill/Index.cshtml">
+        <a class="nav-link" asp-controller="Skill" asp-action="Index">
             <span class="menu-icon">
                 <i class="mdi mdi-speedometer"></i>
             </span>
@@ -86,7 +86,7 @@
         </div> 
     </li> *@ 
     <li class="nav-item menu-items">
-        <a class="nav-link" href="../../pages/forms/basic_elements.html">
+        <a class="nav-link" asp-controller="Experience" asp-action="Index">
             <span class="menu-icon">
                 <i class="mdi mdi-playlist-play"></i>
             </span>
@@ -94,7 +94,7 @@
         </a>
     </li>
     <li class="nav-item menu-items">
-        <a class="nav-link" href="../../pages/tables/basic-table.html">
+        <a class="nav-link" asp-controller="Experience" asp-action="Index">
             <span class="menu-icon">
                 <i class="mdi mdi-table-large"></i>
             </span>
@@ -102,23 +102,16 @@
         </a>
     </li>
     <li class="nav-item menu-items">
-        <a class="nav-link" href="../../pages/charts/chartjs.html">
+        <a class="nav-link" asp-controller="Experience" asp-action="Index">
             <span class="menu-icon">
                 <i class="mdi mdi-chart-bar"></i>
             </span>
             <span class="menu-title">Charts</span>
         </a>
     </li>
+
     <li class="nav-item menu-items">
-        <a class="nav-link" href="../../pages/icons/mdi.html">
-            <span class="menu-icon">
-                <i class="mdi mdi-contacts"></i>
-            </span>
-            <span class="menu-title">Icons</span>
-        </a>
-    </li>
-    <li class="nav-item menu-items">
-        <a class="nav-link" href="../../pages/icons/mdi.html">
+        <a class="nav-link" asp-controller="Portfolio" asp-action="Index">
             <span class="menu-icon">
                 <i class="mdi mdi-github-circle"></i>
             </span>
@@ -142,7 +135,7 @@
         </a>
     </li>
     <li class="nav-item menu-items">
-        <a class="nav-link" href="../../pages/icons/mdi.html">
+        <a class="nav-link" asp-controller="Service" asp-action="Index">
             <span class="menu-icon">
                 <i class="mdi mdi-contacts"></i>
             </span>
@@ -150,7 +143,7 @@
         </a>
     </li>
     <li class="nav-item menu-items">
-        <a class="nav-link" href="../../pages/icons/mdi.html">
+        <a class="nav-link" asp-controller="Feature" asp-action="Index">
             <span class="menu-icon">
                 <i class="mdi mdi-star-circle"></i>
             </span>
@@ -174,13 +167,5 @@
                 <li class="nav-item"> <a class="nav-link" href="../../pages/samples/register.html"> Register </a></li>
             </ul>
         </div>
-    </li>
-    <li class="nav-item menu-items">
-        <a class="nav-link" href="http://www.bootstrapdash.com/demo/corona-free/jquery/documentation/documentation.html">
-            <span class="menu-icon">
-                <i class="mdi mdi-file-document-box"></i>
-            </span>
-            <span class="menu-title">Documentation</span>
-        </a>
     </li>
 </ul>
