--- a/Core_Portfolio/Views/Shared/_NewAdminLayout.cshtml
+++ b/Core_Portfolio/Views/Shared/_NewAdminLayout.cshtml
@@ -28,8 +28,8 @@
         <!-- partial:../../partials/_sidebar.html -->
         <nav class="sidebar sidebar-offcanvas" id="sidebar">
             <div class="sidebar-brand-wrapper d-none d-lg-flex align-items-center justify-content-center fixed-top">
-                <a class="sidebar-brand brand-logo" href="../../index.html"><img src="/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/logo.svg" alt="logo" /></a>
-                <a class="sidebar-brand brand-logo-mini" href="../../index.html"><img src="/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/logo-mini.svg" alt="logo" /></a>
+                <a class="sidebar-brand brand-logo" asp-controller="Dashboard" asp-action="Index"><img src="/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/logo.svg" alt="logo" /></a>
+                <a class="sidebar-brand brand-logo-mini" asp-controller="Dashboard" asp-action="Index"><img src="/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/logo-mini.svg" alt="logo" /></a>
             </div>
             @await Html.PartialAsync("/Views/Admin/NewSideBar.cshtml")
         </nav>
@@ -247,11 +247,17 @@
         </div>
         <!-- page-body-wrapper ends -->
     </div>
+    <!-- page-body-wrapper ends -->
     <!-- container-scroller -->
     <!-- plugins:js -->
-@*     <script src="/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/vendors/js/vendor.bundle.base.js"></script>
- *@    <!-- endinject -->
+    <script src="/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/vendors/js/vendor.bundle.base.js"></script>
+    <!-- endinject -->
     <!-- Plugin js for this page -->
+    <script src="/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/vendors/chart.js/Chart.min.js"></script>
+    <script src="/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/vendors/progressbar.js/progressbar.min.js"></script>
+    <script src="/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/vendors/jvectormap/jquery-jvectormap.min.js"></script>
+    <script src="/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/vendors/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+    <script src="/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/vendors/owl-carousel-2/owl.carousel.min.js"></script>
     <!-- End plugin js for this page -->
     <!-- inject:js -->
     <script src="/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/js/off-canvas.js"></script>
@@ -259,8 +265,10 @@
     <script src="/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/js/misc.js"></script>
     <script src="/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/js/settings.js"></script>
     <script src="/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/js/todolist.js"></script>
-
     <!-- endinject -->
+    <!-- Custom js for this page -->
+    <script src="/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/js/dashboard.js"></script>
+    <!-- End custom js for this page -->
     <!-- Custom js for this page -->
     <!-- End custom js for this page -->
 </body>
