It was ensured that the messages written from the Portfolio page are displayed in the admin panel.

--- a/Core_Portfolio/Views/Admin/NewSideBar.cshtml
+++ b/Core_Portfolio/Views/Admin/NewSideBar.cshtml
@@ -109,6 +109,15 @@
         </a>
     </li>
     <li class="nav-item menu-items">
+        <a class="nav-link" asp-controller="Contact" asp-action="Index">
+            <span class="menu-icon">
+                <i class="mdi mdi-email-outline"></i>
+            </span>
+            <span class="menu-title">Contact Message</span>
+        </a>
+    </li>
+
+    <li class="nav-item menu-items">
         <a class="nav-link" target="_blank" asp-controller="Default" asp-action="Index">
             <span class="menu-icon">
                 <i class="mdi mdi-briefcase"></i>
