Testimonial CRUD operations completed.

--- a/Core_Portfolio/Views/Skill/UpdateSkill.cshtml
+++ b/Core_Portfolio/Views/Skill/UpdateSkill.cshtml
@@ -11,6 +11,7 @@
     <br />
     <br />
     <br />
+    @Html.HiddenFor(x=>x.SkillID)
     @Html.Label("Skill Title:")
     -    <br />
     @Html.TextBoxFor(x => x.Title, new { @class = "form-control" })
