--- a/Core_Portfolio/Views/Admin/NewSideBar.cshtml
+++ b/Core_Portfolio/Views/Admin/NewSideBar.cshtml
@@ -77,7 +77,7 @@
         </a>
     </li>
     <li class="nav-item menu-items">
-        <a class="nav-link" asp-controller="Tes" asp-action="Index">
+        <a class="nav-link" asp-controller="Testimonial" asp-action="Index">
             <span class="menu-icon">
                 <i class="mdi mdi-contacts"></i>
             </span>
