Social Media CRUD operations have been completed. And dynamic listing was provided.

--- a/Core_Portfolio/Views/Admin/NewSideBar.cshtml
+++ b/Core_Portfolio/Views/Admin/NewSideBar.cshtml
@@ -133,6 +133,14 @@
         </div>
     </li>
     <li class="nav-item menu-items">
+        <a class="nav-link"  asp-controller="SocialMedia" asp-action="Index">
+            <span class="menu-icon">
+                <i class="mdi mdi-briefcase"></i>
+            </span>
+            <span class="menu-title">Social Media</span>
+        </a>
+    </li>
+    <li class="nav-item menu-items">
         <a class="nav-link" target="_blank" asp-controller="Default" asp-action="Index">
             <span class="menu-icon">
                 <i class="mdi mdi-briefcase"></i>
