CRUD operations related to Experience were done with AJAX.(Update process will be looked at separately.)

--- a/Core_Portfolio/Views/Admin/NewSideBar.cshtml
+++ b/Core_Portfolio/Views/Admin/NewSideBar.cshtml
@@ -77,6 +77,14 @@
         </a>
     </li>
     <li class="nav-item menu-items">
+        <a class="nav-link" asp-controller="Experience2" asp-action="Index">
+            <span class="menu-icon">
+                <i class="mdi mdi-playlist-play"></i>
+            </span>
+            <span class="menu-title">Experience(AJAX)</span>
+        </a>
+    </li>
+    <li class="nav-item menu-items">
         <a class="nav-link" asp-controller="Testimonial" asp-action="Index">
             <span class="menu-icon">
                 <i class="mdi mdi-contacts"></i>
