--- a/Core_Portfolio/Views/Shared/_NewAdminLayout.cshtml
+++ b/Core_Portfolio/Views/Shared/_NewAdminLayout.cshtml
@@ -153,7 +153,9 @@
                 <div class="content-wrapper">  
                     @RenderBody()
                 </div>
-                @await RenderSectionAsync("Scripts")
+                @await RenderSectionAsync("Scripts",required:false)
+
+
                 <!-- content-wrapper ends -->
                 <!-- partial:../../partials/_footer.html -->
                 <footer class="footer">
