--- a/Core_Portfolio/Views/Shared/_WriterLayout.cshtml
+++ b/Core_Portfolio/Views/Shared/_WriterLayout.cshtml
@@ -22,6 +22,7 @@
             </div>
         </div>
     </div>
+    @await Html.PartialAsync("/Areas/Writer/Views/Default/_FootPartial.cshtml")
 
 </body>
 @await Html.PartialAsync("/Areas/Writer/Views/Default/_ScriptsPartial.cshtml")
