--- a/Core_Portfolio/Areas/Writer/Views/Login/Index.cshtml
+++ b/Core_Portfolio/Areas/Writer/Views/Login/Index.cshtml
@@ -9,7 +9,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Skydash Admin</title>
+    <title>Writer Login</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="/skydash/vendors/feather/feather.css">
     <link rel="stylesheet" href="/skydash/vendors/ti-icons/css/themify-icons.css">
@@ -56,17 +56,11 @@
                                 <div class="mt-3">
                                     <button type="submit" class="btn btn-block btn btn-primary"> Login</button>                  
                                 </div>
-
-                                <div class="my-2 d-flex justify-content-between align-items-center">
-                                    <a href="#" class="auth-link text-black">Forgot password?</a>
-                                </div>
-                                <div class="mb-2">
-                                    <button type="button" class="btn btn-block btn-facebook auth-form-btn">
-                                        <i class="ti-facebook mr-2"></i>Connect using facebook
-                                    </button>
-                                </div>
                                 <div class="text-center mt-4 font-weight-light">
                                     Don't have an account? <a href="/Writer/Register/Index/" class="text-primary">Create Account</a>
+                                </div>
+                                <div class="text-center mt-4 font-weight-light">
+                                    <a href="/AdminLogin/Index/" class="btn btn-warning">Admin Panel Login</a>
                                 </div>
                             </form>
                         </div>
