--- a/Core_Portfolio/Views/Default/Index.cshtml
+++ b/Core_Portfolio/Views/Default/Index.cshtml
@@ -32,8 +32,8 @@
             <footer class="pt-4 pb-4 text-center bg-light">
                 <div class="container">
                     <div class="my-3">
-                        <div class="h4">Walter Patterson</div>
-                        <p>Web Developer & Mobile Application Developer</p>
+                        <div class="h4">Ahmet Seyyit Köse</div>
+                        <p>Bilgisayar Mühendisi & Web Developer</p>
                         <div class="social-nav">
                             <nav role="navigation">
                                 <ul class="nav justify-content-center">
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                     <div class="text-small text-secondary">
-                        <div class="mb-1">&copy; Super Folio. All rights reserved.</div>
+                        <div class="mb-1">&copy; @DateTime.Now.Year All rights reserved.</div>
                         <div>
                             <!-- Make sure to buy a license for the template before removing the line below. Buy license on https://templateflip.com/ -->Design - <a href="https://templateflip.com/" target="_blank">TemplateFlip</a>
                         </div>
