--- a/Core_Portfolio/Views/Default/NavbarPartial.cshtml
+++ b/Core_Portfolio/Views/Default/NavbarPartial.cshtml
@@ -5,12 +5,13 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto me-2">
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">Hakkımda</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#services">Hizmetlerim</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#skills">Yeteneklerim</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#portfolio">Projelerim</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#experience">Deneyimlerim</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">İletişim</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/Writer/Login/Index/">Yazar Girişi</a></li>
                 </ul>
             </div>
         </div>
