--- a/Core_Portfolio/Views/Shared/Components/FeatureList/Default.cshtml
+++ b/Core_Portfolio/Views/Shared/Components/FeatureList/Default.cshtml
@@ -14,7 +14,7 @@
                         <h1 class="intro-title marker" data-aos="fade-left" data-aos-delay="50">@item.Name</h1>
                         <p class="lead fw-normal mt-3" data-aos="fade-up" data-aos-delay="100">@item.Title</p>
                         @await Component.InvokeAsync("SocialMediaList")
-                        <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a class="btn btn-primary shadow-sm mt-1 hover-effect" href="#contact">Get In Touch <i class="fas fa-arrow-right"></i></a></div>
+                        <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a class="btn btn-primary shadow-sm mt-1 hover-effect" href="#contact">İletişime Geçin <i class="fas fa-arrow-right"></i></a></div>
                     </div>
                     }
                 </div>
