--- a/Core_Portfolio/Views/Shared/Components/MessageList/Default.cshtml
+++ b/Core_Portfolio/Views/Shared/Components/MessageList/Default.cshtml
@@ -1,5 +1,5 @@
-﻿@* @using EntityLayer.Concrete
-@model List<UserMessage> *@
+﻿@using EntityLayer.Concrete
+@model List<WriterMessage>
     <div class="col-md-6 col-xl-4 grid-margin stretch-card">
         <div class="card">
             <div class="card-body">
@@ -7,25 +7,25 @@
                     <h4 class="card-title">Messages</h4>
                     <p class="text-muted mb-1 small">View all</p>
                 </div>
-               @*  @foreach (var item in Model)
+                @foreach (var item in Model)
                 {
                    <div class="preview-list">
                     <div class="preview-item border-bottom">
                         <div class="preview-thumbnail">
-                                <img src="@item.User.ImageURL" alt="image" class="rounded-circle" />
+                                @* <img src="@item.User.ImageURL" alt="image" class="rounded-circle" /> *@
                         </div>
                         <div class="preview-item-content d-flex flex-grow">
                             <div class="flex-grow">
                                 <div class="d-flex d-md-block d-xl-flex justify-content-between">
-                                    <h6 class="preview-subject">@item.Title</h6>
-                                        <p class="text-muted text-small">@item.User.Name @item.User.Surname @(((DateTime)item.Date).ToString("dd-MMM-yyyy"))</p>
+                                    <h6 class="preview-subject">@item.Subject</h6>
+                                        <p class="text-muted text-small">@item.SenderName  @(((DateTime)item.Date).ToString("dd-MMM-yyyy"))</p>
                                 </div>
-                                <p class="text-muted">@item.Content.Substring(0,20)...</p>
+                                <p class="text-muted">@item.MessageContent.Substring(0,20)...</p>
                             </div>
                         </div>
                     </div>
                 </div> 
-                } *@
+                }
             </div>
         </div>
     </div>
